<?xml version="1.0"?>
<package>
  <name>ssv102_cpp</name>
  <version>0.1.0</version>
  <description>Hemisphere ssV-102 driver</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tado-aev/ssv102</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nmea_navsat_driver</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>serial</run_depend>
</package>
